# start-axum-workspace

./: .gitignore  Cargo.toml  cargo-generate.toml  devenv.nix  devenv.yaml  flake.nix
crates/app/: Cargo.toml
crates/app/src/: home.rs  lib.rs
crates/app/style/: header.scss
